# minicloth

./: CMakeLists.txt  README.md  Utils.cpp  Utils.h  main.cpp
cmake/: libigl.cmake
